<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_coppeliasim</name>
  <version>0.0.6</version>
  <description>
    TODO
  </description>
  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>MIT</license>
  <depend>navground_core</depend>
  <depend>navground_sim</depend>
  <depend>CoppeliaSim</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
