<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_core</name>
  <version>0.2.1</version>
  <description>
    The navground core library
  </description>
  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>MIT</license>  
  <buildtool_depend>cmake</buildtool_depend>
  <depend>YAML_CPP</depend>
  <depend>Eigen3</depend>
  <depend>argparse</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
