<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_core_py</name>
  <version>0.3.2</version>
  <description>
    The navground core library: python bindings and package
  </description>
  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>MIT</license>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>pybind11</build_depend>
  <depend>Python3</depend>
  <depend>navground_core</depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>setuptools</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
</package>
