[develop]
script_dir=$base/lib/navground_core_py_1
[install]
install_scripts=$base/lib/navground_core_py_1
[options]
install_requires =
   numpy
[options.entry_points]
console_scripts =
   echo = navground.core.echo:main
   info = navground.core.info:main
   plugins = navground.core.list_plugins:main 
   schema = navground.core.print_schema:main 
   validate = navground.core.validate:main 