[options]
install_requires =
   numpy>=1.21
   PyYaml

[options.extras_require]
all = 
   jsonschema>=4.18
   types-jsonschema
   types-PyYAML

[options.entry_points]
console_scripts =
   echo = navground.core.echo:main
   info = navground.core.info:main
   plugins = navground.core.list_plugins:main 
   schema = navground.core.print_schema:main 
   validate = navground.core.validate:main 