<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navground_demos</name>
  <version>0.6.0</version>
  <description>Several ways to implement a demo with two Thymios using navground  </description>
  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>
  <license>MIT</license>
  <depend>navground_core</depend>
  <exec_depend>navground_core_py</exec_depend>
  <depend>navground_sim</depend>
  <exec_depend>navground_sim_py</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
