[develop]
script_dir=$base/lib/navground_demo
[install]
install_scripts=$base/lib/navground_demo
[options.entry_points]
console_scripts =
    enki = navground_demos.enki:main
    enki_sim = navground_demos.enki_sim:main
    native_py = navground_demos.native:main
    ros = navground_demos.ros:main
    sim_py = navground_demos.sim:main
navground_scenarios = 
    thymio_demo = navground_demos.sim:ThymioDemo


